@@ -1,3 +1,8 @@
+2010-09-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V01-05-03
+	* improve dataset management under Streams node
+
 2010-09-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V01-05-02
